<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="app_name">GoFood</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_info">User Info</string>
    <string name="action_app_info">About the App</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="user_prompt">Choose a User type</string>
    <!-- Strings in Main Menu -->
    <string name="account_register">Don\'t have an account? Register Here</string>
    <!-- Strings in Register Restaurant -->
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">E-mail</string>
    <string name="Id">Identification Number</string>
    <string name="Rpass">Reset Password</string>
    <!-- reused username in login -->
    <!-- reused password in login -->
    <string name="confirm_pass">Confirm Password</string>
    <string name="contact">Contact</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Log Out</string>
    <string name="user_order">Your Order</string>

    <string-array name="userstype_array">
        <item>Select User Type</item>
        <item>User</item>
        <item>Storehand</item>
    </string-array>
    <string name="title_activity_login_test">Sign in</string>
    <string name="title_activity_store">Stores </string>
    <string name="title_activity_login__test">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_login_activity2test">Sign in</string>
    <string name="title_activity_user_drawer">UserDrawerActivity</string>
    <string name="ip"></string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
