<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:orientation="vertical"
        android:padding="@dimen/small_padding">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/user_info"
                android:backgroundTint="@color/menuItems"
                android:elevation="@dimen/small_elevation"
                android:paddingBottom="@dimen/button_vertical_spacing"
                android:paddingLeft="@dimen/button_horizontal_spacing"
                android:paddingRight="@dimen/button_horizontal_spacing"
                android:paddingTop="@dimen/button_vertical_spacing"
                android:text="@string/action_user_info"
                android:textColor="@color/white" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/cpass"
                android:backgroundTint="@color/menuItems"
                android:elevation="@dimen/small_elevation"
                android:paddingBottom="@dimen/button_vertical_spacing"
                android:paddingLeft="@dimen/button_horizontal_spacing"
                android:paddingRight="@dimen/button_horizontal_spacing"
                android:paddingTop="@dimen/button_vertical_spacing"
                android:text="@string/Rpass"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/app_info"
                android:backgroundTint="@color/menuItems"
                android:elevation="@dimen/small_elevation"
                android:paddingBottom="@dimen/button_vertical_spacing"
                android:paddingLeft="@dimen/button_horizontal_spacing"
                android:paddingRight="@dimen/button_horizontal_spacing"
                android:paddingTop="@dimen/button_vertical_spacing"
                android:text="@string/action_app_info"
                android:textColor="@color/white" />

        </TableRow>

    </LinearLayout>

</RelativeLayout>
